--- a/myprofile.html
+++ b/myprofile.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Hyyzo | My Profile</title>
+     <title>Baenephit | My Profile</title>
      <meta name="description" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- google fonts link -->
@@ -13,6 +13,7 @@
      <link rel="icon" href="asset/img/favicons/faviconhyyzo-32x32.png" sizes="32x32" type="image/png">
      <link rel="stylesheet" href="asset/css/bootstrap.min.css">
      <link rel="stylesheet" href="asset/css/fontawsome.min.css">
+     <link rel="stylesheet" href="./asset/css/owl.carousel.min.css">
      <link rel="stylesheet" href="asset/css/style.css">
      <link rel="stylesheet" href="asset/css/responsive.css">
      <!-- this is for mordanizar js link -->
@@ -264,26 +265,26 @@
                                                   </div>
                                              </div>
                                              <div class="mb-3 row">
-                                                  <label for="inputDate"
+                                                  <label for="inputDate1"
                                                        class="col-sm-3 col-form-label">Birthday:</label>
                                                   <div class="col-sm-9">
                                                        <input disabled type="date-local" class="form-control"
                                                             placeholder="Date of birth" value="2018-06-12"
-                                                            id="inputDate">
+                                                            id="inputDate1">
                                                   </div>
                                              </div>
                                              <div class="mb-3 row">
-                                                  <label for="inputDate" class="col-sm-3 col-form-label">Email:</label>
+                                                  <label for="inputDate2" class="col-sm-3 col-form-label">Email:</label>
                                                   <div class="col-sm-9">
                                                        <input type="email" disabled class="form-control"
                                                             placeholder="example@gmail.com" value="gang.arpit@gmail.com"
-                                                            id="inputDate">
+                                                            id="inputDate2">
                                                        <div class="bottimActionLink">
                                                             <ul>
-                                                                 <li><a style="color: #0000FF;" href="#"><i
+                                                                 <li><a style="color: #03A88F;" href="#"><i
                                                                                 class="fa-solid fa-pen"></i>
                                                                            Edit</a></li>
-                                                                 <li><a style="color: #FFA500;" href="#">Verify</a></li>
+                                                                 <li><a style="color: #03A88F;" href="#">Verify</a></li>
                                                             </ul>
                                                        </div>
                                                   </div>
@@ -390,10 +391,10 @@
                               <form action="#">
                                    <div class="row mb-3 align-items-center">
                                         <div class="col-auto col_label">
-                                             <label for="inputPassword6" class="col-form-label">Old Password:</label>
+                                             <label for="inputPassword66" class="col-form-label">Old Password:</label>
                                         </div>
                                         <div class="col-auto inputFild">
-                                             <input type="password" id="inputPassword6" class="form-control"
+                                             <input type="password" id="inputPassword66" class="form-control"
                                                   aria-describedby="passwordHelpInline">
                                              <div class="forgotpassLink">
                                                   <a href="#">Forgot-Old-Password?</a>
@@ -402,20 +403,20 @@
                                    </div>
                                    <div class="row mb-3 align-items-center">
                                         <div class="col-auto col_label">
-                                             <label for="inputPassword6" class="col-form-label">New Password :</label>
+                                             <label for="inputPassword67" class="col-form-label">New Password :</label>
                                         </div>
                                         <div class="col-auto inputFild">
-                                             <input type="password" id="inputPassword6" class="form-control"
+                                             <input type="password" id="inputPassword67" class="form-control"
                                                   aria-describedby="passwordHelpInline">
                                         </div>
                                    </div>
                                    <div class="row align-items-center">
                                         <div class="col-auto col_label">
-                                             <label for="inputPassword6" class="col-form-label">Conform Password
+                                             <label for="inputPassword68" class="col-form-label">Conform Password
                                                   :</label>
                                         </div>
                                         <div class="col-auto inputFild">
-                                             <input type="password" id="inputPassword6" class="form-control"
+                                             <input type="password" id="inputPassword68" class="form-control"
                                                   aria-describedby="passwordHelpInline">
                                         </div>
                                    </div>
@@ -457,7 +458,7 @@
                          <div class="footerLogo text-center">
                               <div class="logoBox">
                                    <a href="index.html">
-                                        <img src="./asset/img/logo.png" alt="">
+                                        <img src="./asset/img/logo-white.png" alt="">
                                    </a>
                               </div>
                               <div class="socialConnect">
@@ -512,7 +513,7 @@
                <div class="row">
                     <div class="col-12">
                          <div class="content text-center">
-                              <p>Copyright © 2023 Hyyzo. All rights reserved</p>
+                              <p>Copyright © 2023 Baenephit. All rights reserved</p>
                          </div>
                     </div>
                </div>
@@ -522,6 +523,7 @@
      <!-- all javascript load here -->
      <script src="asset/js/vendor/jquery-3.3.1.min.js"></script>
      <script src="asset/js/bootstrap.bundle.min.js"></script>
+     <script src="./asset/js/owl.carousel.min.js"></script>
      <script src="asset/js/custom.js"></script>
 </body>
 
