--- a/mywallet.html
+++ b/mywallet.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Hyyzo | My Wallet</title>
+     <title>Baenephit | My Wallet</title>
      <meta name="description" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- google fonts link -->
@@ -13,6 +13,7 @@
      <link rel="icon" href="asset/img/favicons/faviconhyyzo-32x32.png" sizes="32x32" type="image/png">
      <link rel="stylesheet" href="asset/css/bootstrap.min.css">
      <link rel="stylesheet" href="asset/css/fontawsome.min.css">
+     <link rel="stylesheet" href="./asset/css/owl.carousel.min.css">
      <link rel="stylesheet" href="asset/css/style.css">
      <link rel="stylesheet" href="asset/css/responsive.css">
      <!-- this is for mordanizar js link -->
@@ -396,10 +397,10 @@
                               <form action="#">
                                    <div class="row mb-3 align-items-center">
                                         <div class="col-auto col_label">
-                                             <label for="inputPassword6" class="col-form-label">Old Password:</label>
+                                             <label for="inputPassword61" class="col-form-label">Old Password:</label>
                                         </div>
                                         <div class="col-auto inputFild">
-                                             <input type="password" id="inputPassword6" class="form-control"
+                                             <input type="password" id="inputPassword61" class="form-control"
                                                   aria-describedby="passwordHelpInline">
                                              <div class="forgotpassLink">
                                                   <a href="#">Forgot-Old-Password?</a>
@@ -408,20 +409,20 @@
                                    </div>
                                    <div class="row mb-3 align-items-center">
                                         <div class="col-auto col_label">
-                                             <label for="inputPassword6" class="col-form-label">New Password :</label>
+                                             <label for="inputPassword62" class="col-form-label">New Password :</label>
                                         </div>
                                         <div class="col-auto inputFild">
-                                             <input type="password" id="inputPassword6" class="form-control"
+                                             <input type="password" id="inputPassword62" class="form-control"
                                                   aria-describedby="passwordHelpInline">
                                         </div>
                                    </div>
                                    <div class="row align-items-center">
                                         <div class="col-auto col_label">
-                                             <label for="inputPassword6" class="col-form-label">Conform Password
+                                             <label for="inputPassword63" class="col-form-label">Conform Password
                                                   :</label>
                                         </div>
                                         <div class="col-auto inputFild">
-                                             <input type="password" id="inputPassword6" class="form-control"
+                                             <input type="password" id="inputPassword63" class="form-control"
                                                   aria-describedby="passwordHelpInline">
                                         </div>
                                    </div>
@@ -463,7 +464,7 @@
                          <div class="footerLogo text-center">
                               <div class="logoBox">
                                    <a href="index.html">
-                                        <img src="./asset/img/logo.png" alt="">
+                                        <img src="./asset/img/logo-white.png" alt="">
                                    </a>
                               </div>
                               <div class="socialConnect">
@@ -518,7 +519,7 @@
                <div class="row">
                     <div class="col-12">
                          <div class="content text-center">
-                              <p>Copyright © 2023 Hyyzo. All rights reserved</p>
+                              <p>Copyright © 2023 Baenephit. All rights reserved</p>
                          </div>
                     </div>
                </div>
@@ -528,6 +529,7 @@
      <!-- all javascript load here -->
      <script src="asset/js/vendor/jquery-3.3.1.min.js"></script>
      <script src="asset/js/bootstrap.bundle.min.js"></script>
+     <script src="./asset/js/owl.carousel.min.js"></script>
      <script src="asset/js/custom.js"></script>
 </body>
 
