--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Privacy & policy | Hyyzo</title>
+     <title>Privacy & policy | Baenephit</title>
      <meta name="description" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- google fonts link -->
@@ -13,6 +13,7 @@
      <link rel="icon" href="asset/img/favicons/faviconhyyzo-32x32.png" sizes="32x32" type="image/png">
      <link rel="stylesheet" href="asset/css/bootstrap.min.css">
      <link rel="stylesheet" href="asset/css/fontawsome.min.css">
+     <link rel="stylesheet" href="./asset/css/owl.carousel.min.css">
      <link rel="stylesheet" href="asset/css/style.css">
      <link rel="stylesheet" href="asset/css/responsive.css">
      <!-- this is for mordanizar js link -->
@@ -179,9 +180,10 @@
                          <div class="content">
                               <h2>Privacy Policy</h2>
                               <div class="singleItem">
-                                   <p>At Hyyzo, accessible from https://hyyzo.com/, one of our main priorities is the
+                                   <p>At Baenephit, accessible from https://Baenephit.com/, one of our main priorities
+                                        is the
                                         privacy of our visitors. This Privacy Policy document contains types of
-                                        information that is collected and recorded by Hyyzo and how we use it.</p>
+                                        information that is collected and recorded by Baenephit and how we use it.</p>
                               </div>
                               <div class="singleItem">
                                    <p>If you have additional questions or require more information about our Privacy
@@ -190,7 +192,7 @@
                               <div class="singleItem">
                                    <p>This Privacy Policy applies only to our online activities and is valid for
                                         visitors to our website with regards to the information that they shared and/or
-                                        collect in Hyyzo. This policy is not applicable to any information collected
+                                        collect in Baenephit. This policy is not applicable to any information collected
                                         offline or via channels other than this website. Our Privacy Policy was created
                                         with the help of the Free Privacy Policy Generator.</p>
                               </div>
@@ -240,7 +242,7 @@
                               <div class="singleItem">
                                    <h4>Log Files</h4>
                                    <div class="innerPara">
-                                        <p>Hyyzo follows a standard procedure of using log files. These files log
+                                        <p>Baenephit follows a standard procedure of using log files. These files log
                                              visitors when they visit websites. All hosting companies do this and a part
                                              of hosting services' analytics. The information collected by log files
                                              include internet protocol (IP) addresses, browser type, Internet Service
@@ -254,7 +256,8 @@
                               <div class="singleItem">
                                    <h4>Cookies and Web Beacons</h4>
                                    <div class="innerPara">
-                                        <p>Like any other website, Hyyzo uses 'cookies'. These cookies are used to store
+                                        <p>Like any other website, Baenephit uses 'cookies'. These cookies are used to
+                                             store
                                              information including visitors' preferences, and the pages on the website
                                              that the visitor accessed or visited. The information is used to optimize
                                              the users' experience by customizing our web page content based on
@@ -265,26 +268,29 @@
                                    <h4>Advertising Partners Privacy Policies</h4>
                                    <div class="innerPara">
                                         <p>You may consult this list to find the Privacy Policy for each of the
-                                             advertising partners of Hyyzo.</p>
+                                             advertising partners of Baenephit.</p>
                                    </div>
                                    <div class="innerPara">
                                         <p>Third-party ad servers or ad networks uses technologies like cookies,
                                              JavaScript, or Web Beacons that are used in their respective advertisements
-                                             and links that appear on Hyyzo, which are sent directly to users' browser.
+                                             and links that appear on Baenephit, which are sent directly to users'
+                                             browser.
                                              They automatically receive your IP address when this occurs. These
                                              technologies are used to measure the effectiveness of their advertising
                                              campaigns and/or to personalize the advertising content that you see on
                                              websites that you visit.</p>
                                    </div>
                                    <div class="innerPara">
-                                        <p>Note that Hyyzo has no access to or control over these cookies that are used
+                                        <p>Note that Baenephit has no access to or control over these cookies that are
+                                             used
                                              by third-party advertisers.</p>
                                    </div>
                               </div>
                               <div class="singleItem">
                                    <h4>Third Party Privacy Policies</h4>
                                    <div class="innerPara">
-                                        <p>Hyyzo's Privacy Policy does not apply to other advertisers or websites. Thus,
+                                        <p>Baenephit's Privacy Policy does not apply to other advertisers or websites.
+                                             Thus,
                                              we are advising you to consult the respective Privacy Policies of these
                                              third-party ad servers for more detailed information. It may include their
                                              practices and instructions about how to opt-out of certain options.</p>
@@ -356,7 +362,8 @@
                                         </p>
                                    </div>
                                    <div class="innerPara">
-                                        <p>Hyyzo does not knowingly collect any Personal Identifiable Information from
+                                        <p>Baenephit does not knowingly collect any Personal Identifiable Information
+                                             from
                                              children under the age of 13. If you think that your child provided this
                                              kind of information on our website, we strongly encourage you to contact us
                                              immediately and we will do our best efforts to promptly remove such
@@ -398,7 +405,7 @@
                          <div class="footerLogo text-center">
                               <div class="logoBox">
                                    <a href="index.html">
-                                        <img src="./asset/img/logo.png" alt="">
+                                        <img src="./asset/img/logo-white.png" alt="">
                                    </a>
                               </div>
                               <div class="socialConnect">
@@ -453,7 +460,7 @@
                <div class="row">
                     <div class="col-12">
                          <div class="content text-center">
-                              <p>Copyright © 2023 Hyyzo. All rights reserved</p>
+                              <p>Copyright © 2023 Baenephit. All rights reserved</p>
                          </div>
                     </div>
                </div>
@@ -463,6 +470,7 @@
      <!-- all javascript load here -->
      <script src="asset/js/vendor/jquery-3.3.1.min.js"></script>
      <script src="asset/js/bootstrap.bundle.min.js"></script>
+     <script src="./asset/js/owl.carousel.min.js"></script>
      <script src="asset/js/custom.js"></script>
 </body>
 
