--- a/store-details.html
+++ b/store-details.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Best cashback website in India | Hyyzo</title>
+     <title>Best cashback website in India | Baenephit</title>
      <meta name="description" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- google fonts link -->
@@ -270,8 +270,9 @@
                                                        <li>Diamonds might not be earned on store's official App.</li>
                                                        <li>Using Exclusive Coupons might cause loss in Diamonds
                                                             Partially or fully.</li>
-                                                       <li>Hyyzo Diamonds are only for transactions made within the same
-                                                            session after the click out from Hyyzo.</li>
+                                                       <li>Baenephit Diamonds are only for transactions made within the
+                                                            same
+                                                            session after the click out from Baenephit.</li>
                                                        <li>No Diamonds on Exchange, Return or cancellation of product.
                                                        </li>
                                                        <li>Max 3 orders per Mamaearth Account/ IP Address/ Shipping
@@ -538,7 +539,8 @@
                                              <h3>Mamaearth Cashback Offers</h3>
                                              <p>MamaEarth never stops offering the best cashback deals on your purchases
                                                   to make your shopping experience enjoyable. You can easily find the
-                                                  MamaEarth cashback offers to get additional cashback via Hyyzo. Hyzzo
+                                                  MamaEarth cashback offers to get additional cashback via Baenephit.
+                                                  Hyzzo
                                                   always benefits its users, and Mamaearth offers will bring you
                                                   shopping joy in their way. Shop from the latest collection of products
                                                   and get cashback when you are buying for the first time or all the
@@ -629,13 +631,13 @@
                                                   turmeric. This Mamaearth face wash is ideal for daily use because it
                                                   works with all skin types, retains moisture, and reduces excess oil.
                                              </p>
-                                             <h3>How to earn cashback on Mamaearth via Hyyzo</h3>
+                                             <h3>How to earn cashback on Mamaearth via Baenephit</h3>
                                              <ul>
                                                   <li>Open your Browser.</li>
-                                                  <li>Login to the Hyyzo site.</li>
-                                                  <li>In the search panel of Hyyzo, Type "Mamaearth."</li>
+                                                  <li>Login to the Baenephit site.</li>
+                                                  <li>In the search panel of Baenephit, Type "Mamaearth."</li>
                                                   <li>Select Mamaearth. You will be redirected to the best Mamaearth
-                                                       cashback offers on the Hyyzo page.</li>
+                                                       cashback offers on the Baenephit page.</li>
                                                   <li>Choose the cashback offer and click on the "Activate Cashback"
                                                        button.</li>
                                                   <li>Then you will be automatically redirected to the website where you
@@ -644,7 +646,7 @@
                                                        the confirmation of your order.</li>
                                              </ul>
                                              <p>Remember, the more you shop, the more cashback you get. Start shopping
-                                                  using the Hyyzo site for Mamaearth Cashback Offers.</p>
+                                                  using the Baenephit site for Mamaearth Cashback Offers.</p>
                                              <table class="table table-bordered">
                                                   <thead>
                                                        <tr>
@@ -726,7 +728,8 @@
                                              <h3>Q1. How can I get the best Mamaearth offers?</h3>
                                              <p>Ans. MamaEarth products are usually available at the best prices on
                                                   their websites. However, the platform also offers a range of MamaEarth
-                                                  offers to help you save more on your order. Via Hyyzo, you will get
+                                                  offers to help you save more on your order. Via Baenephit, you will
+                                                  get
                                                   extra cashback offers for maximum savings.</p>
                                              <h3>Q2. How long does MamaEarth take to deliver our order?</h3>
                                              <p>Ans. Orders are usually dispatched within 48 hours of placing your
@@ -780,7 +783,7 @@
                          <div class="footerLogo text-center">
                               <div class="logoBox">
                                    <a href="index.html">
-                                        <img src="./asset/img/logo.png" alt="">
+                                        <img src="./asset/img/logo-white.png" alt="">
                                    </a>
                               </div>
                               <div class="socialConnect">
@@ -835,7 +838,7 @@
                <div class="row">
                     <div class="col-12">
                          <div class="content text-center">
-                              <p>Copyright © 2023 Hyyzo. All rights reserved</p>
+                              <p>Copyright © 2023 Baenephit. All rights reserved</p>
                          </div>
                     </div>
                </div>
@@ -844,8 +847,8 @@
      <!-- all javascript load here -->
      <script src="asset/js/vendor/jquery-3.3.1.min.js"></script>
      <script src="asset/js/bootstrap.bundle.min.js"></script>
-     <script src="asset/js/custom.js"></script>
      <script src="./asset/js/owl.carousel.min.js"></script>
+     <script src="asset/js/custom.js"></script>
 </body>
 
 </html>
