--- a/stores.html
+++ b/stores.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="utf-8">
-     <title>Best cashback website in India | Hyyzo</title>
+     <title>Best cashback website in India | Baenephit</title>
      <meta name="description" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- google fonts link -->
@@ -13,6 +13,7 @@
      <link rel="icon" href="asset/img/favicons/faviconhyyzo-32x32.png" sizes="32x32" type="image/png">
      <link rel="stylesheet" href="asset/css/bootstrap.min.css">
      <link rel="stylesheet" href="asset/css/fontawsome.min.css">
+     <link rel="stylesheet" href="./asset/css/owl.carousel.min.css">
      <link rel="stylesheet" href="asset/css/style.css">
      <link rel="stylesheet" href="asset/css/responsive.css">
      <!-- this is for mordanizar js link -->
@@ -647,14 +648,15 @@
                                         </div>
                                         <div class="bottomInfoContent">
                                              <p>Worrying too much about savings? Well, Now you Don't Need to because
-                                                  Hyyzo has got your Cashback. Search and shop from 100+ popular online
+                                                  Baenephit has got your Cashback. Search and shop from 100+ popular
+                                                  online
                                                   stores and trending brands on your favourite products. Shop More and
                                                   Spend Less on categories ranging from Food, Medicines, Fashion to
                                                   Electronics, Daily Essentials, and much more. Activate and Redeem
                                                   Cashback and transfer them directly into Wallets or Your Bank Accounts
                                                   when you shop through our Website. To Not to Miss any chance of Extra
                                                   Savings, stay updated on our page for the latest Cashback Offers . Now
-                                                  Buy with Pride only on Hyyzo.</p>
+                                                  Buy with Pride only on Baenephit.</p>
                                         </div>
                                    </div>
                               </div>
@@ -693,7 +695,7 @@
                          <div class="footerLogo text-center">
                               <div class="logoBox">
                                    <a href="index.html">
-                                        <img src="./asset/img/logo.png" alt="">
+                                        <img src="./asset/img/logo-white.png" alt="">
                                    </a>
                               </div>
                               <div class="socialConnect">
@@ -748,7 +750,7 @@
                <div class="row">
                     <div class="col-12">
                          <div class="content text-center">
-                              <p>Copyright © 2023 Hyyzo. All rights reserved</p>
+                              <p>Copyright © 2023 Baenephit. All rights reserved</p>
                          </div>
                     </div>
                </div>
@@ -757,6 +759,7 @@
      <!-- all javascript load here -->
      <script src="asset/js/vendor/jquery-3.3.1.min.js"></script>
      <script src="asset/js/bootstrap.bundle.min.js"></script>
+     <script src="./asset/js/owl.carousel.min.js"></script>
      <script src="asset/js/custom.js"></script>
 </body>
 
